[dependencies]
deribit = { git = "https://github.com/dovahcrow/deribit-rs/" }
curl = { git = "https://github.com/carllerche/curl-rust" }
chrono = "0.4"
futures = { version = "0.3", features = ["async-await"] }
tokio = { version = "0.2", features = ["time", "macros"] }
tungstenite = "0.10"
tokio-tungstenite = { version = "0.10", features = ["tls"]}
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
failure = "0.1"
log = "0.4"
derive_builder = "0.9"
pin-project = "0.4"
shrinkwraprs = "0.3"
regex = "1"
lazy_static = "1"